Fix hidden overflow in display entering padding
Hidden overflow enters padding:
Add another div in html to contain the display,
move padding to that div.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   font-family: "Liberation Sans", sans-serif;
 }
 
-body, #calculator-area, #display, #button-area, .button-row {
+body, #calculator-area, #display-container, #display, #button-area, .button-row {
   display: flex;
 }
 
@@ -14,7 +14,7 @@ body {
   flex-direction: column;
 }
 
-#calculator-area, #display {
+#calculator-area, #display-container {
   border: solid 1px;
 }
 
@@ -25,12 +25,16 @@ body {
   gap: 10px;
 }
 
-#display {
+#display-container {
   padding: 10px;
+  flex-grow: 1;
+}
+
+#display {
   font-size: 28px;
+  flex: 1;
   justify-content: right;
   align-items: center;
-  flex-grow: 1;
   overflow: hidden;
 }
 
